...
                          ),
                        ),
                      ),
                    ),
                    // First name
                    TextFormField(
                      key: Key("fname"),
                      controller: _fNameController,
                      keyboardType: TextInputType.name,
                      focusNode: _focusFname,
                      maxLength: 20,
                      maxLines: 1,
                      onChanged: (val) {
...
                        return null;
                      },
                    ),
                    SizedBox(height: 15),
                    // Surname
                    TextFormField(
                      key: Key("lname"),
                      controller: _lNameController,
                      keyboardType: TextInputType.name,
                      focusNode: _focusLname,
                      maxLength: 20,
                      maxLines: 1,
                      onChanged: (val) {
...
                        return null;
                      },
                    ),
                    SizedBox(height: 15),
                    // Birth date
                    GestureDetector(
                      key: Key("dateField"),
                      onTap: () {
                        _selectDate(context);
                        if (_focusFname.hasFocus) _focusFname.unfocus();
                        if (_focusLname.hasFocus) _focusLname.unfocus();
                        if (_focusEffects.hasFocus) _focusEffects.unfocus();
                      },
...
                      ),
                    ),
                    SizedBox(height: 15),
                    // city
                    DropdownButtonHideUnderline(
                      child: DropdownButtonFormField<String>(
                        key: Key("cityDropdown"),
                        decoration: InputDecoration(
                          labelText: "City",
                          prefixIcon: Icon(Icons.location_city),
                          contentPadding: EdgeInsets.symmetric(
                              horizontal: 10, vertical: 20),
                          fillColor: Colors.white,
...
                      ),
                    ),
                    SizedBox(height: 15),
                    // gender
                    DropdownButtonHideUnderline(
                      child: DropdownButtonFormField<String>(
                        key: Key("genderDropdown"),
                        decoration: InputDecoration(
                          labelText: "Gender",
                          prefixIcon: Icon(Icons.wc),
                          contentPadding: EdgeInsets.symmetric(
                              horizontal: 10, vertical: 20),
                          fillColor: Colors.white,
...
                      ),
                    ),
                    SizedBox(height: 15),
                    // vaccine type
                    DropdownButtonHideUnderline(
                      child: DropdownButtonFormField<String>(
                        key: Key("vaccineDropdown"),
                        decoration: InputDecoration(
                          labelText: "Vaccine Type",
                          prefixIcon: Icon(Icons.medical_services),
                          contentPadding: EdgeInsets.symmetric(
                              horizontal: 10, vertical: 20),
                          fillColor: Colors.white,
...
                        },
                      ),
                    ),
                    SizedBox(height: 15),
                    // side effects
                    TextFormField(
                      key: Key("sideEffects"),
                      controller: _effectsController,
                      keyboardType: TextInputType.text,
                      maxLines: 5,
                      onChanged: (val) {
                        setState(() {});
                      },
...
                    if (_chosenGender != null &&
                        _chosenCity != null &&
                        _chosenVaccine != null &&
                        _formKey.currentState != null &&
                        _formKey.currentState.validate())
                      ElevatedButton(
                        key: Key("submit"),
                        style: ElevatedButton.styleFrom(
                          primary: Color(0xFF101820), // background
                          onPrimary: Color(0xFFF2AA4C), // foreground
                        ),
                        onPressed: () {
                          Toast.show("Submitted", context,
...
